--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".interfaceadapter.presenter.DetailPresenter">
+    tools:context=".interfaceadapter.activity.DetailActivity">
 
     <WebView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/web_view"
