--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".interfaceadapter.presenter.ListPresenter">
+        tools:context=".interfaceadapter.activity.ListActivity">
         
         <EditText
         android:id="@+id/edit_text"
